# MagicCube

./: LICENSE  README.md  cube.cpp  cube.h  main.cpp  makefile
GLUT/: cube.cpp  makefile
QGLWidget/: Cube.sln
QGLWidget/Cube/: CMakeLists.txt  Cube.vcxproj  Cube.vcxproj.filters  cube.cpp  cube.h  main.cpp
QGLWidget/Cube/GeneratedFiles/: qrc_cube.cpp
